@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="skin.estuary.mod" version="1.3.0" name="Estuary MOD" provider-name="phil65, Piers and MOD by Guilouz">
+<addon id="skin.estuary.mod" version="1.3.1" name="Estuary MOD" provider-name="phil65, Piers and MOD by Guilouz">
 	<requires>
 		<import addon="xbmc.gui" version="5.12.0"/>
 		<import addon="script.skinshortcuts" version="0.6.0"/>
@@ -94,6 +94,6 @@
 		<license>CC BY-SA 4.0, GNU GENERAL PUBLIC LICENSE Version 2.0</license>
 		<forum>http://forum.kodi.tv/</forum>
 		<source>https://github.com/Guilouz/skin.estuary.mod</source>
-		<news>[B]1.3.0[/B][CR]• Add 'My TV shows airing today' on default tv shows widget[CR]• Add 'Next episodes to watch' on default tv shows widget[CR]• Add yes/no dialog window when reset skin settings[CR]• Hide hard disk usage on Android system[CR]• Changes in PVR guide[CR]• Changes in personnalise home menu[CR]• Fix widgets with horizontal menu[CR]• Improve esthetic appearance[CR][CR][B]1.2.9[/B][CR]• Add horizontal home menu[CR]• Add Rotten TomatoMeter and Rotten Tomatoes Audience Score for tv shows[CR]• Fix rating flag icon color[CR]• Minnor fix[CR][CR][B]1.2.8[/B][CR]• Now use Skin Helper Service for Music Clearlogos and CDArts[CR]• Add ClearLogos on home screen for widgets[CR]• Add Fanarts on home screen for widgets[CR]• Add new Live TV widget (thanks to im85288)[CR]• Add support for music extrafanarts with Skin Helper Service[CR]• Add Clearlogos on music visualisation[CR]• Add banner on music visualisation[CR]• Add banner on tv shows info[CR]• Add new views for images : Icons wall and List[CR]• Add casting list on video OSD (thanks to im85288)[CR]• Add the file size of add-ons packages[CR]• Changes in functioning of personnalise home menu[CR]• Changes in widgets with labels on top[CR]• Changes for Krypton[CR]• Improve esthetic appearance[CR][CR][B]1.2.7[/B][CR]• Krypton : Replace changelog file with a 'news' section in addon.xml[CR]• Add possibility to change skin color[CR]• Add Clearlogo on video OSD[CR]• Add IMDB flag icon on video OSD[CR]• Add possibility to choose multi images for home menu background[CR]• Replace year by total episodes in list views for tv shows and seasons[CR]• Improve esthetic appearance[CR]• Fix poster on video OSD[CR]• Fix ratings with tv shows[CR]• Fix duration flag icon with music videos[CR]• Fix ratings with tv shows[CR]• Updated language files from Transifex[CR][CR][B]1.2.6[/B][CR]• Add new icons flags : Rotten TomatoMeter, Rotten Tomatoes Audience Score and MetaCritic rating[CR]• Add possibility to show music visualisation screen directly when playing song[CR][CR][B]1.2.5[/B][CR]• Add changes from original Estuary 0.8.0[CR]• Improve icons resolution[CR]• Changes in dialog select[CR]• Fix studios icons[CR]• Fix missing string[CR][CR][B]1.2.4[/B][CR]• Improve esthetic appearance[CR]• Fix recently added episodes widget[CR][CR][B]1.2.3[/B][CR]• Add info on Big Poster view[CR]• Add extrafanarts support for 'Show Fanart' button on video info[CR]• Now use Skin Helper Service for extrafanarts[CR][CR][B]1.2.2[/B][CR]• Add album cover for next track on music OSD[CR]• Add possibility to disable zoom effect on focus[CR]• Add Show Path button on music video info[CR]• Improve volume progress with unit[CR]• Improve clock icon[CR]• Update AudioDSPManager.xml with core changes[CR][CR][B]1.2.1[/B][CR]• Add CU LRC Lyrics addon integration on music OSD[CR]• Add new CD case on music visualisation[CR]• Add button on video OSD to access extended info[CR]• Add a setting in personnalise home menu to replace thumbnails of episodes by fanarts[CR]• Add description for each skin setting[CR]• Improve esthetic appearance[CR]• Fix list on dialog settings[CR]• Fix play/pause button on media menu[CR]• Fix episode label on videos search[CR][CR][B]1.2.0[/B][CR]• Changes in skin settings to be the same as others settings[CR]• Add possibility to reset each skin settings category individually[CR]• Add possibility to show/hide background visualisation effect[CR]• Add possibility to access to music playlist from music OSD[CR]• Add music videos on default menu[CR]• Add default music videos widget[CR]• Add AudioDSP settings and manager to music OSD[CR]• Add arrows for home menu when there is more than 9 items[CR]• Fix fanarts when playing media[CR]• Fix settings widgets[CR]• Fix video info for music videos[CR]• Improve esthetic appearance[CR]• Updated language files from Transifex[CR][CR][B]1.1.9[/B][CR]• Changes in ClearLogos and ClearArts views[CR]• Changes in profile settings to be the same as others settings[CR]• Replace settings widget by system info widget[CR]• Fix channels 4 digits on PVR guide[CR]• Fix missing recently added widget after updating library[CR]• Fix audio DSP if no modes[CR]• Improve esthetic appearance[CR][CR][B]1.1.8[/B][CR]• Add Last/Next Aired episode on some views and on TV Shows info[CR]• Add Extendedinfo video search support[CR]• Add T9 search dialog addon support[CR]• Update for GlobalSearch addon[CR]• Fix visualisation over fading[CR]• Fix header label of picture widget[CR]• Fix widget selection when no submenu is define[CR]• Fix popup notification on startup[CR]• Fix scrollbars and media menu in some case[CR]• Fix posters on some views[CR][CR][B]1.1.7[/B][CR]• Add Big Posters view[CR]• Add Library view[CR]• Add all icons for Skin Shortcuts (latest git is needed)[CR]• Add 'Recent unwatched episodes' and 'Recent unwatched movies' smartplaylists[CR]• Add possibility to hide watched episodes from recently added episodes for default TV Shows widget[CR]• Add possibility to hide watched movies from recently added movies for default Movies widget[CR]• Improve esthetic appearance[CR]• Move scrollbar to the left on left panel in File Manager[CR]• Move scrollbar to the left on select and file browser dialogs[CR]• Updated language files from Transifex[CR]• Updated default slider[CR][CR][B]1.1.6[/B][CR]• Add watched, unwatched and resume indicators on all views[CR]• Add possibility to choose ClearArt position on OSD[CR]• Add ClearLogos view[CR]• Add ClearArts view[CR]• Add Big Fanart view[CR]• Improve esthetic appearance[CR]• Changes on Shift view[CR][CR][B]1.1.5[/B][CR]• Add possibility to hide banner of picture widget[CR]• Add Estuary Mod logo to media menu[CR]• Changes on video OSD and ClearArt[CR]• Changes on TV shows widget[CR]• Fix exception in ContentProvider with extrafanarts and plugins[CR]• Fix playlist scrollbar[CR]• Other fix[CR][CR][B]1.1.4[/B][CR]• Add possibility to replace busy spinner (.gif file, multiimages folder or built-in skin)[CR]• Add possibility to show/hide background video[CR]• Add support for extrafanarts[CR]• Updated language files from Transifex[CR]• Reorganization of shortcuts and widgets[CR]• Fix Eventlog buttons[CR]• Other minor fixes[CR][CR][B]1.1.3[/B][CR]• Add track duration on album infos[CR]• Add widgets for search and bottom menu[CR]• Many fixes in PVR[CR]• Changes in skin settings[CR][CR][B]1.1.2[/B][CR]• Add settings layout changes[CR]• Remove no more needed Audio DSP Manager items[CR]• Fix buttons on Audio DSP Manager[CR]• Changes on LibreELEC Configuration and OpenELEC Configuration[CR]• Bump xbmc.gui to 5.12.0[CR]• Updated language files from Transifex[CR][CR][B]1.1.1[/B][CR]• Add support for LibreELEC Configuration and OpenELEC Configuration addons[CR]• Changes on keyboard[CR]• Fix autoscroll on list view[CR]• Fix syntax[CR][CR][B]1.1.0[/B][CR]• Add Kiosk Mode[CR]• Add possibility to hide information bars all over skin[CR]• Add possibility to change background opacity[CR]• Fix bottom bar and scroll bar[CR]• Fix on media menu[CR][CR][B]1.0.9[/B][CR]• Add possibility to hide information bars on library[CR]• Add support for recordlabels icons[CR]• Add possibility to show video/song path on info screen[CR]• Several changes[CR][CR][B]1.0.8[/B][CR]• Add last changes from original Estuary build[CR]• Add total number of installed addons on addons screen[CR]• Add languages and subtitles languages on video infos[CR]• Fix widgets position to not interfere with submenu[CR][CR][B]1.0.7[/B][CR]• Add song bitrate on osd infos[CR]• Add support for 'Weather Fanart - Multi' addon[CR]• Add default icon for roles node[CR]• Change for returns duration of a video will end if you resume it, instead of playing it from the beginning[CR]• Fix ClearArt[CR]• Fix esthetic appearance[CR][CR][B]1.0.6[/B][CR]• Add changes from original Estuary 0.7.9[CR]• Add possibility to set background in personnalize home menu[CR]• Fix tvshows posters when posters is selected for widget[CR]• Fix description label in select dialog[CR]• Fix english translation[CR]• Display fixes[CR][CR][B]1.0.5[/B][CR]• Add new search function in media menu[CR]• Remove script-globalsearch-contextmenu.xml. Not need with latest build[CR]• Minnor fixes[CR][CR][B]1.0.4[/B][CR]• Add director search support in Global Search[CR]• Add TV Show - Next Aired addon support[CR]• Changes in context menu[CR]• Fix addons icons[CR]• Add latest original build 0.7.8[CR][CR][B]1.0.3[/B][CR]• Fix on PVR[CR]• Fix on skin settings[CR][CR][B]1.0.2[/B][CR]• Add possibility to set media flags of the same color as skin[CR]• Add animated posters support[CR]• Add posters support for video addons[CR]• Replace watched and unwatched icons[CR]• Changes in duration labels and flags icons[CR]• Fix library default icons[CR]• Many others changes[CR][CR][B]1.0.1[/B][CR]• Add duration, finish time and rating flags icons[CR]• Fix OSD infos[CR]• Fix on video infos[CR]• Fix on Global Search[CR]• Fix on RSS Editor[CR]• Update french translation[CR][CR][B]1.0.0[/B][CR]• Initial release (with latest original Estuary 0.7.7)[CR]- Add Skin Shortcuts support to manage home menu and power menu[CR]- Widgets from original Estuary are selectable in personnalize home menu[CR]- Add Artwork Downloader support to download artworks[CR]- Add Artist Slideshow support for music osd[CR]- Add Global Search support to search in local library[CR]- Add Play Album support to play album directly on album infos[CR]- Add Nextup Service Notification support to show popup with next episode[CR]- Add RSS Editor support[CR]- Add ClearLogos support[CR]- Add ClearArts support[CR]- Add Music CDArts support[CR]- Add possibility to choose picture, vidéo or music at startup[CR]- Add possibility to download artworks after library update[CR]- Add possibility to choose a pictures folder with picture widget to show a slideshow[CR]- Add possibility to change weather icons[CR]- Add possibility to backup/restore skin settings[CR]- Add debug infos setting[CR]- Add new genres view with icons[CR]- Rearranging skin settings[CR]- Replace flags icons[CR]- Replace OSD buttons (Thanks Ichabod Fletchman)[CR]- Replace backgrounds without banding (Thanks Ichabod Fletchman)[CR]- Replace duration format with hours and minutes[CR]- Dolby Atmos and DTS-X naming support[CR]- Increase to 25 the number of widgets items[CR]- Bug fixes[CR]</news>
+		<news>[B]1.3.1[/B][CR]• Fix widget selection[CR][CR][B]1.3.0[/B][CR]• Add 'My TV shows airing today' on default tv shows widget[CR]• Add 'Next episodes to watch' on default tv shows widget[CR]• Add yes/no dialog window when reset skin settings[CR]• Hide hard disk usage on Android system[CR]• Changes in PVR guide[CR]• Changes in personnalise home menu[CR]• Fix widgets with horizontal menu[CR]• Improve esthetic appearance[CR][CR][B]1.2.9[/B][CR]• Add horizontal home menu[CR]• Add Rotten TomatoMeter and Rotten Tomatoes Audience Score for tv shows[CR]• Fix rating flag icon color[CR]• Minnor fix[CR][CR][B]1.2.8[/B][CR]• Now use Skin Helper Service for Music Clearlogos and CDArts[CR]• Add ClearLogos on home screen for widgets[CR]• Add Fanarts on home screen for widgets[CR]• Add new Live TV widget (thanks to im85288)[CR]• Add support for music extrafanarts with Skin Helper Service[CR]• Add Clearlogos on music visualisation[CR]• Add banner on music visualisation[CR]• Add banner on tv shows info[CR]• Add new views for images : Icons wall and List[CR]• Add casting list on video OSD (thanks to im85288)[CR]• Add the file size of add-ons packages[CR]• Changes in functioning of personnalise home menu[CR]• Changes in widgets with labels on top[CR]• Changes for Krypton[CR]• Improve esthetic appearance[CR][CR][B]1.2.7[/B][CR]• Krypton : Replace changelog file with a 'news' section in addon.xml[CR]• Add possibility to change skin color[CR]• Add Clearlogo on video OSD[CR]• Add IMDB flag icon on video OSD[CR]• Add possibility to choose multi images for home menu background[CR]• Replace year by total episodes in list views for tv shows and seasons[CR]• Improve esthetic appearance[CR]• Fix poster on video OSD[CR]• Fix ratings with tv shows[CR]• Fix duration flag icon with music videos[CR]• Fix ratings with tv shows[CR]• Updated language files from Transifex[CR][CR][B]1.2.6[/B][CR]• Add new icons flags : Rotten TomatoMeter, Rotten Tomatoes Audience Score and MetaCritic rating[CR]• Add possibility to show music visualisation screen directly when playing song[CR][CR][B]1.2.5[/B][CR]• Add changes from original Estuary 0.8.0[CR]• Improve icons resolution[CR]• Changes in dialog select[CR]• Fix studios icons[CR]• Fix missing string[CR][CR][B]1.2.4[/B][CR]• Improve esthetic appearance[CR]• Fix recently added episodes widget[CR][CR][B]1.2.3[/B][CR]• Add info on Big Poster view[CR]• Add extrafanarts support for 'Show Fanart' button on video info[CR]• Now use Skin Helper Service for extrafanarts[CR][CR][B]1.2.2[/B][CR]• Add album cover for next track on music OSD[CR]• Add possibility to disable zoom effect on focus[CR]• Add Show Path button on music video info[CR]• Improve volume progress with unit[CR]• Improve clock icon[CR]• Update AudioDSPManager.xml with core changes[CR][CR][B]1.2.1[/B][CR]• Add CU LRC Lyrics addon integration on music OSD[CR]• Add new CD case on music visualisation[CR]• Add button on video OSD to access extended info[CR]• Add a setting in personnalise home menu to replace thumbnails of episodes by fanarts[CR]• Add description for each skin setting[CR]• Improve esthetic appearance[CR]• Fix list on dialog settings[CR]• Fix play/pause button on media menu[CR]• Fix episode label on videos search[CR][CR][B]1.2.0[/B][CR]• Changes in skin settings to be the same as others settings[CR]• Add possibility to reset each skin settings category individually[CR]• Add possibility to show/hide background visualisation effect[CR]• Add possibility to access to music playlist from music OSD[CR]• Add music videos on default menu[CR]• Add default music videos widget[CR]• Add AudioDSP settings and manager to music OSD[CR]• Add arrows for home menu when there is more than 9 items[CR]• Fix fanarts when playing media[CR]• Fix settings widgets[CR]• Fix video info for music videos[CR]• Improve esthetic appearance[CR]• Updated language files from Transifex[CR][CR][B]1.1.9[/B][CR]• Changes in ClearLogos and ClearArts views[CR]• Changes in profile settings to be the same as others settings[CR]• Replace settings widget by system info widget[CR]• Fix channels 4 digits on PVR guide[CR]• Fix missing recently added widget after updating library[CR]• Fix audio DSP if no modes[CR]• Improve esthetic appearance[CR][CR][B]1.1.8[/B][CR]• Add Last/Next Aired episode on some views and on TV Shows info[CR]• Add Extendedinfo video search support[CR]• Add T9 search dialog addon support[CR]• Update for GlobalSearch addon[CR]• Fix visualisation over fading[CR]• Fix header label of picture widget[CR]• Fix widget selection when no submenu is define[CR]• Fix popup notification on startup[CR]• Fix scrollbars and media menu in some case[CR]• Fix posters on some views[CR][CR][B]1.1.7[/B][CR]• Add Big Posters view[CR]• Add Library view[CR]• Add all icons for Skin Shortcuts (latest git is needed)[CR]• Add 'Recent unwatched episodes' and 'Recent unwatched movies' smartplaylists[CR]• Add possibility to hide watched episodes from recently added episodes for default TV Shows widget[CR]• Add possibility to hide watched movies from recently added movies for default Movies widget[CR]• Improve esthetic appearance[CR]• Move scrollbar to the left on left panel in File Manager[CR]• Move scrollbar to the left on select and file browser dialogs[CR]• Updated language files from Transifex[CR]• Updated default slider[CR][CR][B]1.1.6[/B][CR]• Add watched, unwatched and resume indicators on all views[CR]• Add possibility to choose ClearArt position on OSD[CR]• Add ClearLogos view[CR]• Add ClearArts view[CR]• Add Big Fanart view[CR]• Improve esthetic appearance[CR]• Changes on Shift view[CR][CR][B]1.1.5[/B][CR]• Add possibility to hide banner of picture widget[CR]• Add Estuary Mod logo to media menu[CR]• Changes on video OSD and ClearArt[CR]• Changes on TV shows widget[CR]• Fix exception in ContentProvider with extrafanarts and plugins[CR]• Fix playlist scrollbar[CR]• Other fix[CR][CR][B]1.1.4[/B][CR]• Add possibility to replace busy spinner (.gif file, multiimages folder or built-in skin)[CR]• Add possibility to show/hide background video[CR]• Add support for extrafanarts[CR]• Updated language files from Transifex[CR]• Reorganization of shortcuts and widgets[CR]• Fix Eventlog buttons[CR]• Other minor fixes[CR][CR][B]1.1.3[/B][CR]• Add track duration on album infos[CR]• Add widgets for search and bottom menu[CR]• Many fixes in PVR[CR]• Changes in skin settings[CR][CR][B]1.1.2[/B][CR]• Add settings layout changes[CR]• Remove no more needed Audio DSP Manager items[CR]• Fix buttons on Audio DSP Manager[CR]• Changes on LibreELEC Configuration and OpenELEC Configuration[CR]• Bump xbmc.gui to 5.12.0[CR]• Updated language files from Transifex[CR][CR][B]1.1.1[/B][CR]• Add support for LibreELEC Configuration and OpenELEC Configuration addons[CR]• Changes on keyboard[CR]• Fix autoscroll on list view[CR]• Fix syntax[CR][CR][B]1.1.0[/B][CR]• Add Kiosk Mode[CR]• Add possibility to hide information bars all over skin[CR]• Add possibility to change background opacity[CR]• Fix bottom bar and scroll bar[CR]• Fix on media menu[CR][CR][B]1.0.9[/B][CR]• Add possibility to hide information bars on library[CR]• Add support for recordlabels icons[CR]• Add possibility to show video/song path on info screen[CR]• Several changes[CR][CR][B]1.0.8[/B][CR]• Add last changes from original Estuary build[CR]• Add total number of installed addons on addons screen[CR]• Add languages and subtitles languages on video infos[CR]• Fix widgets position to not interfere with submenu[CR][CR][B]1.0.7[/B][CR]• Add song bitrate on osd infos[CR]• Add support for 'Weather Fanart - Multi' addon[CR]• Add default icon for roles node[CR]• Change for returns duration of a video will end if you resume it, instead of playing it from the beginning[CR]• Fix ClearArt[CR]• Fix esthetic appearance[CR][CR][B]1.0.6[/B][CR]• Add changes from original Estuary 0.7.9[CR]• Add possibility to set background in personnalize home menu[CR]• Fix tvshows posters when posters is selected for widget[CR]• Fix description label in select dialog[CR]• Fix english translation[CR]• Display fixes[CR][CR][B]1.0.5[/B][CR]• Add new search function in media menu[CR]• Remove script-globalsearch-contextmenu.xml. Not need with latest build[CR]• Minnor fixes[CR][CR][B]1.0.4[/B][CR]• Add director search support in Global Search[CR]• Add TV Show - Next Aired addon support[CR]• Changes in context menu[CR]• Fix addons icons[CR]• Add latest original build 0.7.8[CR][CR][B]1.0.3[/B][CR]• Fix on PVR[CR]• Fix on skin settings[CR][CR][B]1.0.2[/B][CR]• Add possibility to set media flags of the same color as skin[CR]• Add animated posters support[CR]• Add posters support for video addons[CR]• Replace watched and unwatched icons[CR]• Changes in duration labels and flags icons[CR]• Fix library default icons[CR]• Many others changes[CR][CR][B]1.0.1[/B][CR]• Add duration, finish time and rating flags icons[CR]• Fix OSD infos[CR]• Fix on video infos[CR]• Fix on Global Search[CR]• Fix on RSS Editor[CR]• Update french translation[CR][CR][B]1.0.0[/B][CR]• Initial release (with latest original Estuary 0.7.7)[CR]- Add Skin Shortcuts support to manage home menu and power menu[CR]- Widgets from original Estuary are selectable in personnalize home menu[CR]- Add Artwork Downloader support to download artworks[CR]- Add Artist Slideshow support for music osd[CR]- Add Global Search support to search in local library[CR]- Add Play Album support to play album directly on album infos[CR]- Add Nextup Service Notification support to show popup with next episode[CR]- Add RSS Editor support[CR]- Add ClearLogos support[CR]- Add ClearArts support[CR]- Add Music CDArts support[CR]- Add possibility to choose picture, vidéo or music at startup[CR]- Add possibility to download artworks after library update[CR]- Add possibility to choose a pictures folder with picture widget to show a slideshow[CR]- Add possibility to change weather icons[CR]- Add possibility to backup/restore skin settings[CR]- Add debug infos setting[CR]- Add new genres view with icons[CR]- Rearranging skin settings[CR]- Replace flags icons[CR]- Replace OSD buttons (Thanks Ichabod Fletchman)[CR]- Replace backgrounds without banding (Thanks Ichabod Fletchman)[CR]- Replace duration format with hours and minutes[CR]- Dolby Atmos and DTS-X naming support[CR]- Increase to 25 the number of widgets items[CR]- Bug fixes[CR]</news>
 	</extension>
 </addon>
